Removing ValidationFailureResponseMapper, throwing exceptions from validators instead